Fixed Issue #68: Tick Mark Legibility

--- a/src/pages/test/components/multirangeslider.css
+++ b/src/pages/test/components/multirangeslider.css
@@ -119,7 +119,7 @@
 }
 .multi-range-slider .ruler .ruler-rule {
 	border-left: solid 1px;
-	border-color: #525252;
+	border-color: white;
 
 	display: flex;
 	flex-grow: 1;
@@ -128,13 +128,13 @@
 }
 .multi-range-slider .ruler .ruler-rule:last-child {
 	border-right: solid 1px;
-	border-color: #525252;
+	border-color: white;
 
 }
 
 .multi-range-slider .ruler .ruler-sub-rule {
 	border-left: solid 1px;
-	border-color: #525252;
+	border-color: white;
 
 	/* border-bottom: solid 1px; */
 	display: flex;
